--- a/etcd-api/etcd-api.cabal
+++ b/etcd-api/etcd-api.cabal
@@ -1,7 +1,8 @@
 name:                etcd-api
 version:             0.1.0.0
 synopsis:            Types modelling etcd's API
-homepage:            https://github.com/kim/etcd.hs
+homepage:            https://github.com/kim/etcdpp
+bug-reports:         https://github.com/kim/etcdpp/issues
 license:             MPL-2.0
 license-file:        LICENSE
 author:              Kim Altintop
@@ -9,6 +10,10 @@ maintainer:          kim.altintop@gmail.com
 category:            Data
 build-type:          Simple
 cabal-version:       >=1.10
+
+source-repository head
+  type:     git
+  location: https://github.com/kim/etcdpp
 
 library
   exposed-modules:
