--- a/etcd-simple/etcd-simple.cabal
+++ b/etcd-simple/etcd-simple.cabal
@@ -31,11 +31,10 @@ library
     , http-client
     , http-types
     , lens
-    , monad-control
     , mtl
     , text
+    , tinylog
     , transformers
-    , transformers-base
 
   hs-source-dirs:    src
   default-language:  Haskell2010
