Add Util module

--- a/etcd-recipes/etcd-recipes.cabal
+++ b/etcd-recipes/etcd-recipes.cabal
@@ -26,6 +26,7 @@ library
     Database.Etcd.Election
     Database.Etcd.PriorityQueue
     Database.Etcd.Queue
+    Database.Etcd.Util
 
   build-depends:
       async
