--- a/etcd-simple/etcd-simple.cabal
+++ b/etcd-simple/etcd-simple.cabal
@@ -17,7 +17,7 @@ source-repository head
 
 library
   exposed-modules:
-    Database.Etcd
+    Database.Etcd.Simple
 
   build-depends:
       aeson                 (>= 0.8 && < 0.10) || > 0.10
@@ -25,16 +25,24 @@ library
     , bifunctors
     , bytestring
     , bytestring-conversion
-    , etcd-api
+    , etcdpp
     , exceptions
     , free
     , http-client
     , http-types
     , lens
+    , monad-control
     , mtl
     , text
     , tinylog
     , transformers
+    , transformers-base
+
+  ghc-options:
+    -Wall
+    -O
+    -fwarn-tabs
+    -funbox-small-strict-fields
 
   hs-source-dirs:    src
   default-language:  Haskell2010
